ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrAAC.h


typedef void* INTPTR;

typedef char* PCHAR;


typedef struct
{
	double ValorGT;
	char NumeroSerie[30];
	int CRO;
	int CNI;
	double DtHrAtualizado;
} TECFAutorizado;



// Funções

DllImport int AAC_AbrirArquivo(const INTPTR aacHandle);

DllImport int AAC_AchaECF(const INTPTR aacHandle, const PCHAR numSerie, TECFAutorizado* ECF);

DllImport int AAC_AchaIndiceECF(const INTPTR aacHandle, const PCHAR numSerie, int* indice);

DllImport int AAC_AtualizarMD5(const INTPTR aacHandle, const PCHAR md5);

DllImport int AAC_AtualizarValorGT(const INTPTR aacHandle, const PCHAR numSerie, const double grandeTotal);

DllImport int AAC_GetNomeArquivoAux(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_GetParams(const INTPTR aacHandle, PCHAR buffer, const int bufferLen, const int index);

DllImport int AAC_GetParamsCount(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_ECFsAutorizados_Clear(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_ECFsAutorizados_Count(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_ECFsAutorizados_Get(const INTPTR aacHandle, TECFAutorizado* retAutorizado, const int index);

DllImport int AAC_IdentPaf_ECFsAutorizados_New(const INTPTR aacHandle, const TECFAutorizado ecfAutorizado);

DllImport int AAC_SalvarArquivo(const INTPTR aacHandle);

DllImport int AAC_SetNomeArquivoAux(const INTPTR aacHandle, const PCHAR caminho);

DllImport int AAC_SetParams(const INTPTR aacHandle, const PCHAR parametros[], const int count);

DllImport int AAC_VerificaReCarregarArquivo(const INTPTR aacHandle);

DllImport int AAC_VerificarGTECF(const INTPTR aacHandle, const PCHAR numSerie, double* grandeTotal);